--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,45 @@
-<p> ciao benvenuto in questa pagina </p>
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag 'a2.jpg' %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'a3.jpg' %>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'a4.jpg' %>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<br>
+<div class="ildiv">
+<%= image_tag 'a1.jpg' %>
+<p class="torre"> questa e la Torre Eiffel
+  <p class="testo">
+  <br>
+  Il grande sviluppo industriale, che, a grandi ritmi, aveva interessato la Francia nell'Ottocento consentì la costruzione di edifici sempre più alti. Ciò fu possibile grazie all'entrata in produzione di nuovi materiali edilizi, come le<br> ghise, l'acciaio e rame, impiegati per produrre travi e altri elementi strutturali analoghi che, con le loro alte resistenze, rivoluzionarono il modo di costruire. In questi anni, segnati dal progresso industriale, l'idea di una torre<br> svettante che sfidasse la gravità era già nell'aria: basti pensare all'inglese Richard Trevithick, che già nel 1833 aveva progettato una colonna di ghisa traforata alta mille piedi, poi mai realizzata.<br>
+
+Quando, sul finire del 1884, il governo francese annunciò di voler salutare l'Esposizione Universale del 1889 di Parigi - la decima di quelle rassegne consacrate ai fasti della produzione industriale - con un'opera di dimensioni<br> colossali, Maurice Koechlin e Émile Nouguier aderirono entusiasticamente all'impresa. Koechlin e Nouguier erano due ingegneri alle dipendenze della Compagnie des Établissements Eiffel, una fiorente ditta gestita da<br> Gustave Eiffel, uno dei più accreditati «architetti del ferro» del periodo, e l'idea che avevano avuto era ambiziosa: si trattava di un «imponente pilastro metallico, formato da quattro travi reticolari svasate in basso che si<br> congiungono in cima, legate tra loro mediante traverse disposte a intervalli regolari». Il ferro era ovviamente l'unico materiale adeguato a una costruzione di una simile portata.<br>
+
+Eiffel, pur consentendo a Koechlin e Nouguier di proseguire i loro studi, inizialmente riservò al progetto iniziale solo un'attenzione distratta; in un secondo momento ne intuì la genialità e, pertanto, si avvalse della<br> collaborazione di Stephen Sauvestre, ingegnere capo del dipartimento di architettura della sua società. L'apporto tecnico di Sauvestre fu fondamentale non solo sotto il profilo tecnico - egli, infatti, contribuì a correggere vari<br> errori di fondo del progetto di Koechlin e Nouguier - bensì anche sotto quello estetico, in quanto modificò la forma della torre per renderla più accattivante agli occhi dell'opinione pubblica, con l'aggiunta di linee meno<br> spigolose e più aggraziate, ingentilite anche con svariati ornamenti.<br>
+</div>
+
+<br>
+<div class="ildiv2">
+<div class="lafoto">
+<%= image_tag 'a5.jpg' %>
+</div>
+<p class="torre2"> questo è l'arco della vittoria(Trionfo)
+  <p class="testo2">
+  <br>
+ Congiunge il cortile del Louvre ai giardini delle Tuileries. All'epoca della sua costruzione, era situato molto vicino all'oggi distrutto Palazzo delle Tuileries. Fa parte della cosiddetta Axe <br> historique, linea delineatasi durante lo sviluppo urbanistico della capitale che percorre in linea retta diverse zone centrali di Parigi: a partire dal Louvre, passa per<br> l'Arc de Triomphe de l'Étoile, per poi arrivare al postmoderno Arco de La Défense, simbolo del quartiere omonimo. Dal punto di vista amministrativo si trova nel I° arrondissement.</div>
+
