--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,190 @@
  *= require_tree .
  *= require_self
  */
+ @import url('https://fonts.googleapis.com/css?family=Inconsolata|Lato:300,400,700');
+
+
+
+
+/* Appearance */
+.links {
+	background-color: #123;
+	background-image: linear-gradient(to bottom, #0003, transparent);
+	border-bottom: 1px solid #0003;
+	box-shadow: 0 0 32px #0003;
+	font-size: 2em;
+	font-weight: 300;
+}
+.links  {
+    background-color: 0003;
+	color: #9ab;
+	padding: .75em;
+	text-align: center;
+
+}
+
+
+ 
+ 
+ @import url("https://fonts.googleapis.com/css?family=Crimson+Text&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Work+Sans&display=swap");
+body {
+  background: #28305a;
+  height: 100vh;
+  margin: 0 20px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+p{
+    color: white;
+}
+
+
+
+
+
+.title {
+  color: white;
+  font-family: "Crimson Text", serif;
+  font-size: 80px;
+  line-height: 84px;
+  margin-top: 60px;
+  text-align: center;
+}
+.body {
+  color: white;
+  font-family: "Work Sans", sans-serif;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 28px;
+  margin: 30px auto;
+  max-width: 600px;
+  text-align: center;
+}
+
+ .body{
+     background-color: #252525;
+ }
+/* Main Footer */
+footer .main-footer{	padding: 20px 0; background: #252525;}
+footer ul{	padding-left: 0;	list-style: none;}
+
+/* Copy Right Footer */
+.footer-copyright {	background: #222;	padding: 5px 0;}
+.footer-copyright .logo {    display: inherit;}
+.footer-copyright nav {    float: right;    margin-top: 5px;}
+.footer-copyright nav ul {	list-style: none;	margin: 0;	padding: 0;}
+.footer-copyright nav ul li {	border-left: 1px solid #505050;	display: inline-block;	line-height: 12px;	margin: 0;	padding: 0 8px;}
+.footer-copyright nav ul li a{	color: #969696;}
+.footer-copyright nav ul li:first-child {	border: medium none;	padding-left: 0;}
+.footer-copyright p {	color: #969696;	margin: 2px 0 0;}
+
+/* Footer Top */
+.footer-top{	background: #252525;	padding-bottom: 30px;	margin-bottom: 30px;	border-bottom: 3px solid #222;}
+
+/* Footer transparent */
+footer.transparent .footer-top, footer.transparent .main-footer{	background: transparent;}
+footer.transparent .footer-copyright{	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.3) ;}
+
+/* Footer light */
+footer.light .footer-top{	background: #f9f9f9;}
+footer.light .main-footer{	background: #f9f9f9;}
+footer.light .footer-copyright{	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.3) ;}
+
+/* Footer 4 */
+.footer- .logo {    display: inline-block;}
+
+/*====================
+	Widgets
+====================== */
+.widget{	padding: 20px;	margin-bottom: 40px;}
+.widget.widget-last{	margin-bottom: 0px;}
+.widget.no-box{	padding: 0;	background-color: transparent;	margin-bottom: 40px;
+    box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none; -ms-box-shadow: none; -o-box-shadow: none;}
+.widget.subscribe p{	margin-bottom: 18px;}
+.widget li a{	color: #ff8d1e;}
+.widget li a:hover{	color: #4b92dc;}
+.widget-title {margin-bottom: 20px;}
+.widget-title span {background: #839FAD none repeat scroll 0 0;display: block; height: 1px;margin-top: 25px;position: relative;width: 20%;}
+.widget-title span::after {background: inherit;content: "";height: inherit;    position: absolute;top: -4px;width: 50%;}
+.widget-title.text-center span,.widget-title.text-center span::after {margin-left: auto;margin-right:auto;left: 0;right: 0;}
+.widget .badge{	float: right;	background: #7f7f7f;}
+
+
+
+ul.social-footer2 {	margin: 0;padding: 0;	width: auto;}
+ul.social-footer2 li {display: inline-block;padding: 0;}
+ul.social-footer2 li a:hover {background-color:#ff8d1e;}
+ul.social-footer2 li a {display: block;	height:30px;width: 30px;text-align: center;}
+.field{
+    color: white;
+    font-size: 20px;
+}
+.form-group{
+    color: white;
+    font-size: 20px;
+}
+.colorrino{
+
+    color: white;
+}
+.torre{
+    position: relative;
+    top:-500px;
+    right: -900px;
+    font-size: 45px;
+    font-family: 'Stint Ultra Condensed', cursive;
+    padding: 5px; 
+    letter-spacing: 3px;
+}
+.testo{
+    position: relative;
+    top:-550px;
+    right: -560px;
+   font-size: 22px;
+    font-family: 'Stint Ultra Condensed', cursive;
+    padding: 5px; 
+}
+.ildiv{
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 500px;
+}
+
+.giacomo{
+    position: absolute;
+    bottom: 0px;
+    
+}
+
+
+
+
+.torre2{
+    position: relative;
+    top:-12px;
+    left: 500px;
+    font-size: 45px;
+    font-family: 'Stint Ultra Condensed', cursive;
+    padding: 5px; 
+    letter-spacing: 3px;
+}
+
+
+.testo2{
+    position: relative;
+    top:45px;
+    left: 0px;
+   font-size: 27px;
+    font-family: 'Stint Ultra Condensed', cursive;
+    padding: 5px; 
+}
+
+.ildiv2{
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 426px;
+}
+.lafoto{
+    position: absolute;
+    right: 15px;
+}
