--- a/app/views/tours/new.html.erb
+++ b/app/views/tours/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Tour</h1>
+<h1 class="colorrino">Crea un nuovo Tour</h1>
 
 <%= render 'form', tour: @tour %>
-
-<%= link_to 'Back', tours_path %>
+<br>
+<%= link_to 'Indietro', tours_path,class:"btn btn-info w-100" %>
